test/Harper/Tests/Good/issue5_ass.har
fun n = {
  var y = n;
  var n = n;
  n *= 2;
  return y;
};

main = fun 42;