test/Harper/Tests/Bad/issue007_unassigned.har
fun :: Integer;
fun = {
    var (x :: Integer);
    (n :: Integer) = x;
    return n;
};

main :: Integer;
main = fun;